# jellytics

./: .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
jellytics/: __init__.py  config.py  dashboard.py  database.py  main.py  models.py  notifications.py  schemas.py  webhook.py
jellytics/templates/: base.html  dashboard.html  history.html
jellytics/templates/notifications/: default.body.j2  default.title.j2  item_added.body.j2  item_added.title.j2
tests/: test_webhook.py
